# VQMR

./: .gitignore  CLAUDE.md  FRONTEND_TEMPLATES.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run.sh  streamlit_app.py
docs/: fastapi-jinja2-ssr-architecture.md  ffmpeg-quality-metrics-best-practices.md
pages/: 2_📈_Report_Details.py  3_📉_Metrics_Comparison.py  bitstream_report.py  metrics_comparison.py  report_details.py
specs/001-video-quality-metrics-report/: CHARTJS_SUMMARY.md  chartjs-quickstart.md  chartjs-research.md  data-model.md  encoding-templates.md  plan.md  pytest-quick-reference.md  pytest-testing-best-practices.md  quickstart.md  research.md  tasks.md
src/: Homepage.py  main.py  models.py  models_template.py  reports_app.py  schemas.py  schemas_metrics_analysis.py  schemas_template.py
src/api/: __init__.py  jobs.py  metrics_analysis.py  pages.py  templates.py
src/application/: __init__.py  bitstream_analyzer.py  job_processor.py  template_executor.py
src/config/: __init__.py  settings.py
src/pages/: Metrics_Analysis.py  Metrics_Comparison.py  Stream_Analysis.py  bitstream_report.py  metrics_analysis_compare.py
src/services/: __init__.py  bitstream_analysis.py  ffmpeg.py  metrics_analysis_runner.py  processor.py  storage.py  template_encoder.py  template_runner.py  template_storage.py
src/shared/: __init__.py  bd_utils.py  ffmpeg_runner.py  metrics_tables.py  url_helpers.py
src/templates/: base.html  bitstream_analysis.html  index.html  job_report.html  jobs_list.html  template_detail.html  template_form.html  (+1 more)
(+46 files in other folders)
